--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,13 @@ name = "universal-inserter"
 version = "0.1.0"
 edition = "2024"
 rust-version = "1.85"
+authors = ["Your Name <your.email@example.com>"]
 description = "A runtime-agnostic batch inserter library implementing the ClickHouse Inserter pattern"
 license = "MIT"
-repository = "https://github.com/user/universal-inserter"
+repository = "https://github.com/avbel/universal-inserter"
+homepage = "https://github.com/avbel/universal-inserter"
+documentation = "https://docs.rs/universal-inserter"
+readme = "README.md"
 keywords = ["async", "batch", "inserter", "buffer"]
 categories = ["asynchronous", "data-structures"]
 
