Update authors in Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "universal-inserter"
 version = "0.1.0"
 edition = "2024"
 rust-version = "1.85"
-authors = ["Your Name <your.email@example.com>"]
+authors = ["Andrei Belchikov <belchikovs@gmail.com>"]
 description = "A runtime-agnostic batch inserter library implementing the ClickHouse Inserter pattern"
 license = "MIT"
 repository = "https://github.com/avbel/universal-inserter"
